@@ -1,0 +1,7 @@
+.msearch2-mirrors-item {
+	padding: 5px;
+}
+
+.msearch2-mirrors-item small {
+	color: #AAA;
+}
